[build-system]
requires = ["setuptools>=61.0", "wheel", "hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"


[project]
name = "gatling"
dynamic = ["dependencies"]
version = "0.3.0.4"

description = "A unified I/O management toolkit supporting threads, coroutines, files, databases, and data formats"

readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "MacroMozilla", email = "honyzeng7@gmail.com" }
]

license = { text = "MIT" }


[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
Homepage = "https://github.com/MacroMozilla/gatling"
Repository = "https://github.com/MacroMozilla/gatling"

[tool.setuptools.packages.find]
where = ["."]
