[build-system]
requires = ["setuptools>=62.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatling"
dynamic = ["dependencies"]
version = "0.3.0.8"

description = "A unified I/O management toolkit supporting threads, coroutines, files, databases, and data formats"

readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "MacroMozilla", email = "honyzeng7@gmail.com" }
]

license = { text = "MIT" }


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/MacroMozilla/gatling"
Repository = "https://github.com/MacroMozilla/gatling"

[tool.setuptools.packages.find]
where = ["."]
